// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket actions Header image saga actions delete tickets header image 1`] = `
Object {
  "type": "@@MT/TICKETS/DELETE_TICKETS_HEADER_IMAGE",
}
`;

exports[`Ticket actions Header image saga actions fetch tickets header image 1`] = `
Object {
  "payload": Object {
    "id": 1,
  },
  "type": "@@MT/TICKETS/FETCH_TICKETS_HEADER_IMAGE",
}
`;

exports[`Ticket actions Header image saga actions update tickets header image 1`] = `
Object {
  "payload": Object {
    "image": Object {
      "alt": "hi",
      "id": 1,
      "src": "#",
    },
  },
  "type": "@@MT/TICKETS/UPDATE_TICKETS_HEADER_IMAGE",
}
`;

exports[`Ticket actions Ticket actions register ticket block 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
  },
  "type": "@@MT/TICKETS/REGISTER_TICKET_BLOCK",
}
`;

exports[`Ticket actions Ticket actions remove ticket block 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
  },
  "type": "@@MT/TICKETS/REMOVE_TICKET_BLOCK",
}
`;

exports[`Ticket actions Ticket actions set ticket availability 1`] = `
Object {
  "payload": Object {
    "available": 99,
    "blockId": "modern-tribe",
  },
  "type": "@@MT/TICKETS/SET_TICKET_AVAILABLE",
}
`;

exports[`Ticket actions Ticket actions set ticket currency positioin 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "currencyPosition": "suffix",
  },
  "type": "@@MT/TICKETS/SET_TICKET_CURRENCY_POSITION",
}
`;

exports[`Ticket actions Ticket actions set ticket currency symbol 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "currencySymbol": "$",
  },
  "type": "@@MT/TICKETS/SET_TICKET_CURRENCY_SYMBOL",
}
`;

exports[`Ticket actions Ticket actions set ticket has been created 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "hasBeenCreated": true,
  },
  "type": "@@MT/TICKETS/SET_TICKET_HAS_BEEN_CREATED",
}
`;

exports[`Ticket actions Ticket actions set ticket has been created 2`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "hasBeenCreated": false,
  },
  "type": "@@MT/TICKETS/SET_TICKET_HAS_BEEN_CREATED",
}
`;

exports[`Ticket actions Ticket actions set ticket has changes 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "hasChanges": true,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_HAS_CHANGES",
}
`;

exports[`Ticket actions Ticket actions set ticket has changes 2`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "hasChanges": false,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_HAS_CHANGES",
}
`;

exports[`Ticket actions Ticket actions set ticket id 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "ticketId": 99,
  },
  "type": "@@MT/TICKETS/SET_TICKET_ID",
}
`;

exports[`Ticket actions Ticket actions set ticket is loading 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "isLoading": true,
  },
  "type": "@@MT/TICKETS/SET_TICKET_IS_LOADING",
}
`;

exports[`Ticket actions Ticket actions set ticket is loading 2`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "isLoading": false,
  },
  "type": "@@MT/TICKETS/SET_TICKET_IS_LOADING",
}
`;

exports[`Ticket actions Ticket actions set ticket is selected 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "isSelected": true,
  },
  "type": "@@MT/TICKETS/SET_TICKET_IS_SELECTED",
}
`;

exports[`Ticket actions Ticket actions set ticket is selected 2`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "isSelected": false,
  },
  "type": "@@MT/TICKETS/SET_TICKET_IS_SELECTED",
}
`;

exports[`Ticket actions Ticket actions set ticket provider 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "provider": "provider",
  },
  "type": "@@MT/TICKETS/SET_TICKET_PROVIDER",
}
`;

exports[`Ticket actions Ticket actions set ticket sold 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "sold": 23,
  },
  "type": "@@MT/TICKETS/SET_TICKET_SOLD",
}
`;

exports[`Ticket actions Ticket details actions set ticket capacity 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "capacity": "10",
  },
  "type": "@@MT/TICKETS/SET_TICKET_CAPACITY",
}
`;

exports[`Ticket actions Ticket details actions set ticket capacity type 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "capacityType": "unlimited",
  },
  "type": "@@MT/TICKETS/SET_TICKET_CAPACITY_TYPE",
}
`;

exports[`Ticket actions Ticket details actions set ticket description 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "description": "The Next Generation of Digital Agency",
  },
  "type": "@@MT/TICKETS/SET_TICKET_DESCRIPTION",
}
`;

exports[`Ticket actions Ticket details actions set ticket end date 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "endDate": "2018-01-10",
  },
  "type": "@@MT/TICKETS/SET_TICKET_END_DATE",
}
`;

exports[`Ticket actions Ticket details actions set ticket end date input 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "endDateInput": "January 10, 2018",
  },
  "type": "@@MT/TICKETS/SET_TICKET_END_DATE_INPUT",
}
`;

exports[`Ticket actions Ticket details actions set ticket end moment 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "endDateMoment": Object {
      "type": "moment",
    },
  },
  "type": "@@MT/TICKETS/SET_TICKET_END_DATE_MOMENT",
}
`;

exports[`Ticket actions Ticket details actions set ticket end moment 2`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "endDateMoment": null,
  },
  "type": "@@MT/TICKETS/SET_TICKET_END_DATE_MOMENT",
}
`;

exports[`Ticket actions Ticket details actions set ticket end time 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "endTime": "12:34",
  },
  "type": "@@MT/TICKETS/SET_TICKET_END_TIME",
}
`;

exports[`Ticket actions Ticket details actions set ticket price 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "price": 99,
  },
  "type": "@@MT/TICKETS/SET_TICKET_PRICE",
}
`;

exports[`Ticket actions Ticket details actions set ticket sku 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "sku": "my-sku",
  },
  "type": "@@MT/TICKETS/SET_TICKET_SKU",
}
`;

exports[`Ticket actions Ticket details actions set ticket start date 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "startDate": "2018-01-01",
  },
  "type": "@@MT/TICKETS/SET_TICKET_START_DATE",
}
`;

exports[`Ticket actions Ticket details actions set ticket start date input 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "startDateInput": "January 1, 2018",
  },
  "type": "@@MT/TICKETS/SET_TICKET_START_DATE_INPUT",
}
`;

exports[`Ticket actions Ticket details actions set ticket start moment 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "startDateMoment": Object {
      "type": "moment",
    },
  },
  "type": "@@MT/TICKETS/SET_TICKET_START_DATE_MOMENT",
}
`;

exports[`Ticket actions Ticket details actions set ticket start moment 2`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "startDateMoment": null,
  },
  "type": "@@MT/TICKETS/SET_TICKET_START_DATE_MOMENT",
}
`;

exports[`Ticket actions Ticket details actions set ticket start time 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "startTime": "10:00",
  },
  "type": "@@MT/TICKETS/SET_TICKET_START_TIME",
}
`;

exports[`Ticket actions Ticket saga actions create new ticket 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
  },
  "type": "@@MT/TICKETS/CREATE_NEW_TICKET",
}
`;

exports[`Ticket actions Ticket saga actions delete ticket 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
  },
  "type": "@@MT/TICKETS/DELETE_TICKET",
}
`;

exports[`Ticket actions Ticket saga actions fetch ticket 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "ticketId": 99,
  },
  "type": "@@MT/TICKETS/FETCH_TICKET",
}
`;

exports[`Ticket actions Ticket saga actions handle ticket start date 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "date": Object {},
    "dayPickerInput": Object {},
  },
  "type": "@@MT/TICKETS/HANDLE_TICKET_START_DATE",
}
`;

exports[`Ticket actions Ticket saga actions handle ticket start date 2`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "date": Object {},
    "dayPickerInput": Object {},
  },
  "type": "@@MT/TICKETS/HANDLE_TICKET_END_DATE",
}
`;

exports[`Ticket actions Ticket saga actions handle ticket start date 3`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "seconds": 1000,
  },
  "type": "@@MT/TICKETS/HANDLE_TICKET_START_TIME",
}
`;

exports[`Ticket actions Ticket saga actions handle ticket start date 4`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "seconds": 1000,
  },
  "type": "@@MT/TICKETS/HANDLE_TICKET_END_TIME",
}
`;

exports[`Ticket actions Ticket saga actions set ticket details 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "details": Object {},
  },
  "type": "@@MT/TICKETS/SET_TICKET_DETAILS",
}
`;

exports[`Ticket actions Ticket saga actions set ticket initial state 1`] = `
Object {
  "payload": Object {
    "attributes": Object {
      "ticketId": 99,
    },
    "clientId": "modern-tribe",
  },
  "type": "@@MT/TICKETS/SET_TICKET_INITIAL_STATE",
}
`;

exports[`Ticket actions Ticket saga actions set ticket temp details 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "tempDetails": Object {},
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_DETAILS",
}
`;

exports[`Ticket actions Ticket saga actions update ticket 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
  },
  "type": "@@MT/TICKETS/UPDATE_TICKET",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp capacity 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "capacity": "10",
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_CAPACITY",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp capacity type 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "capacityType": "unlimited",
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_CAPACITY_TYPE",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp description 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "description": "The Next Generation of Digital Agency",
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_DESCRIPTION",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp end date 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "endDate": "2018-01-10",
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_END_DATE",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp end date input 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "endDateInput": "January 10, 2018",
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_END_DATE_INPUT",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp end moment 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "endDateMoment": Object {
      "type": "moment",
    },
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_END_DATE_MOMENT",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp end moment 2`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "endDateMoment": null,
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_END_DATE_MOMENT",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp end time 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "endTime": "12:34",
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_END_TIME",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp price 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "price": 99,
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_PRICE",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp sku 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "sku": "my-sku",
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_SKU",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp start date 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "startDate": "2018-01-01",
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_START_DATE",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp start date input 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "startDateInput": "January 1, 2018",
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_START_DATE_INPUT",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp start moment 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "startDateMoment": Object {
      "type": "moment",
    },
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_START_DATE_MOMENT",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp start moment 2`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "startDateMoment": null,
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_START_DATE_MOMENT",
}
`;

exports[`Ticket actions Ticket temp details actions set ticket temp start time 1`] = `
Object {
  "payload": Object {
    "blockId": "modern-tribe",
    "startTime": "10:00",
  },
  "type": "@@MT/TICKETS/SET_TICKET_TEMP_START_TIME",
}
`;

exports[`Ticket actions Tickets actions close settings 1`] = `
Object {
  "payload": Object {
    "isSettingsOpen": false,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_IS_SETTINGS_OPEN",
}
`;

exports[`Ticket actions Tickets actions open settings 1`] = `
Object {
  "payload": Object {
    "isSettingsOpen": true,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_IS_SETTINGS_OPEN",
}
`;

exports[`Ticket actions Tickets actions set tickets header image 1`] = `
Object {
  "payload": Object {
    "image": 10,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_HEADER_IMAGE",
}
`;

exports[`Ticket actions Tickets actions set tickets initial state 1`] = `
Object {
  "payload": Object {
    "attributes": Object {
      "header": 99,
      "sharedCapacity": 19,
    },
    "clientId": "modern-tribe",
  },
  "type": "@@MT/TICKETS/SET_TICKETS_INITIAL_STATE",
}
`;

exports[`Ticket actions Tickets actions set tickets is settings loading 1`] = `
Object {
  "payload": Object {
    "isSettingsLoading": true,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_IS_SETTINGS_LOADING",
}
`;

exports[`Ticket actions Tickets actions set tickets is settings loading 2`] = `
Object {
  "payload": Object {
    "isSettingsLoading": false,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_IS_SETTINGS_LOADING",
}
`;

exports[`Ticket actions Tickets actions set tickets is settings open 1`] = `
Object {
  "payload": Object {
    "isSettingsOpen": true,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_IS_SETTINGS_OPEN",
}
`;

exports[`Ticket actions Tickets actions set tickets is settings open 2`] = `
Object {
  "payload": Object {
    "isSettingsOpen": false,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_IS_SETTINGS_OPEN",
}
`;

exports[`Ticket actions Tickets actions set tickets provider 1`] = `
Object {
  "payload": Object {
    "provider": "Tribe__Tickets__Commerce__PayPal__Main",
  },
  "type": "@@MT/TICKETS/SET_TICKETS_PROVIDER",
}
`;

exports[`Ticket actions Tickets actions set tickets shared capacity 1`] = `
Object {
  "payload": Object {
    "sharedCapacity": 99,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_SHARED_CAPACITY",
}
`;

exports[`Ticket actions Tickets actions set tickets temp shared capacity 1`] = `
Object {
  "payload": Object {
    "tempSharedCapacity": 99,
  },
  "type": "@@MT/TICKETS/SET_TICKETS_TEMP_SHARED_CAPACITY",
}
`;
